style: Add CSS for h1 and h2 heads, buttons, and containers. Reposition music buttons in Pandemic Player section. Add instructions text and 'Stay Intoxicated' heading. Crop image in search section (since the person is supposed to be drinking alone). Still need to correct spacing, move plus button and make it olive green, add cocktail napkin image, clean up cruf code, and make a few other changes.

--- a/realq/styles.css
+++ b/realq/styles.css
@@ -46,6 +46,31 @@ body .demo-blog {
   background-size: cover;
 }
 
+#search {
+  margin-right: 50px;
+  margin-left: 0px;
+  background-color: #827e45;
+  color: white;
+}
+#random-cocktail {
+  background-color: #827e45;
+  color: white;
+}
+
+h1 {
+  font-size: 1.65rem;
+}
+
+h2 {
+  font-size: 1.35rem;
+  margin: 2rem;
+  text-align: center;
+  color: #ffb308
+}
+
+mdl-textfield__input {
+  padding-left: 30px;
+}
 .demo-blog .demo-blog__posts {
   background-repeat: no-repeat;
   max-width: 1200px;
@@ -62,6 +87,28 @@ body .demo-blog {
       -ms-flex-negative: 0;
           flex-shrink: 0;
 }
+#jazz {margin-left: 10px;
+}
+#ingredients {
+  background-image: url(images/napkin.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+button.mdl-button {
+  background-color: #827e45;
+  color: white;
+  font-size: 1rem;
+}
+  
+
+.force-opaque::placeholder {
+  opacity: 1;
+}
+
+p {
+  margin: 2rem;
+}
+
 .demo-blog.mdl-layout .mdl-layout__content {
   padding-top: 230px;
   position: relative;
@@ -105,7 +152,7 @@ body .demo-blog {
 }
 .demo-blog .mdl-card__media a,
 .demo-blog .mdl-card__title a {
-  color: inherit;
+  background-color: #827e45;
 }
 .demo-blog .mdl-card__supporting-text {
   width: 100%;
@@ -181,7 +228,7 @@ body .demo-blog {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-.demo-blog.is-small-screen .demo-blog__posts > .mdl-card.coffee-pic {
+.demo-blog.is-small-screen .demo-blog__posts > .mdl-card.cocktail-pic {
   -webkit-order: 0;
       -ms-flex-order: 0;
           order: 0;
@@ -191,8 +238,10 @@ body .demo-blog {
       -ms-flex-order: -1;
           order: -1;
 }
-.demo-blog .coffee-pic .mdl-card__media {
-  background-image: url("https://images.unsplash.com/photo-1568644396922-5c3bfae12521?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80");
+
+.demo-blog .cocktail-pic .mdl-card__media {
+  background-image: url(images/Toast.jpg);
+  object-fit: scale-down;
 }
 .demo-blog .something-else .mdl-card__media {
   display: -webkit-flex;
@@ -209,6 +258,7 @@ body .demo-blog {
           align-items: center;
 }
 .demo-blog .something-else > button {
+  background-color: #827e45;
   position: absolute;
   top: 0;
   right: 28px;
@@ -222,8 +272,8 @@ body .demo-blog {
   border-top-right-radius: 2px;
 }
 .demo-blog .something-else .mdl-card__media img {
-  width: 64px;
-  height: 64px;
+  width: 164px;
+  height: 164px;
   margin-bottom: 10px;
 }
 .demo-blog .something-else .mdl-card__supporting-text {
@@ -232,10 +282,10 @@ body .demo-blog {
   border-bottom-right-radius: 2px;
 }
 .demo-blog .on-the-road-again .mdl-card__media {
-  background-image: url('images/road.jpg');
+  background-color: black;
 }
 .demo-blog .shopping .mdl-card__media {
-  background-image: url('images/shopping.jpg');
+  background-color: black;
 }
 .demo-blog .demo-blog__posts > .demo-nav {
   margin: 12px 15px;
@@ -252,21 +302,24 @@ body .demo-blog {
       -ms-flex-align: center;
           align-items: center;
   color: white;
+  background-color: #827e45;
   font-weight: 500;
 }
 .demo-blog .demo-blog__posts > .demo-nav > .demo-nav__button {
-  color: white;
+ background-color: #827e45;
   text-decoration: none;
 }
 .demo-blog .demo-blog__posts > .demo-nav .mdl-button {
   color: rgba(0,0,0,0.54);
-  background-color: white;
+  background-color: #827e45;
 }
 .demo-blog .demo-blog__posts > .demo-nav > .demo-nav__button:first-child .mdl-button {
   margin-right: 16px;
+  background-color: #827e45;
 }
 .demo-blog .demo-blog__posts > .demo-nav > .demo-nav__button:last-child .mdl-button {
   margin-left: 16px;
+  background-color: #827e45;
 }
 .demo-blog .mdl-card > a {
   color: inherit;
@@ -281,6 +334,7 @@ body .demo-blog {
 }
 .demo-blog .mdl-card h3.quote:before, .demo-blog .mdl-card h3.quote:after {
   display: block;
+  height: 2;
   font-size: 3em;
   margin-top: 0.5em;
 }
@@ -290,12 +344,16 @@ body .demo-blog {
 .demo-blog .mdl-card h3.quote:after {
   content: '”';
 }
+
+div.mdl-card__media mdl-color-text--grey-50 {
+  min-height: 4;
+}
 .demo-blog--blogpost .custom-header {
   background-color: transparent;
 }
 .demo-blog--blogpost .demo-blog__posts > .mdl-card .mdl-card__media {
   background-image: url('images/road_big.jpg');
-  height: 280px;
+  height: 580px;
 }
 
 .demo-blog--blogpost .meta > * {
